--- a/portfolio/css/portfolio.css
+++ b/portfolio/css/portfolio.css
@@ -41,3 +41,175 @@ body {
   background: yellow;
   height:500px;
 }
+
+
+<!--  프로젝트 c 파트 리셋 초기화 -->
+
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+<!-- project c test.css -->
+
+@charset "utf-8";
+/* common */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system,BlinkMacSystemFont,helvetica,Apple SD Gothic Neo,'굴림',gulim,sans-serif;
+  text-align: left;
+  font-size: 13px;
+  line-height:20px;
+  color: #000
+}
+
+html[data-useragent*=mac] body * {
+  font-family: 'Apple SD Gothic NEO',helvetica,sans-serif!important
+}
+
+input,select,textarea {
+  font-family: -apple-system,BlinkMacSystemFont,helvetica,Apple SD Gothic Neo,'굴림',gulim,sans-serif;
+  font-size: 13px;
+  color: #000
+}
+
+address,dd,div,dl,dt,em,fieldset,form,h1,h2,h3,h4,iframe,input,li,object,ol,p,select,textarea,ul {
+  margin: 0;
+  padding: 0
+}
+
+img{
+  vertical-align: top;
+}
+fieldset,iframe,img {
+  border: none
+}
+
+iframe {
+  display: block
+}
+
+ol,ul {
+  list-style-type: none
+}
+
+table {
+  clear: both;
+  border-collapse: collapse
+}
+
+address,em {
+  font-style: normal
+}
+
+select {
+  height: 20px;
+  font-size: 12px
+}
+
+input {
+  padding-right: 1px
+}
+
+.ipad input[type=text],button,input[type=button],input[type=image],input[type=submit],textarea {
+  -webkit-appearance: none;
+  -webkit-text-size-adjust: none;
+  -webkit-border-radius: 0
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0.1);
+}
+
+table {
+  border-collapse: collapse;
+}
+
+table caption {
+  display: none !important;
+}
+.blind {
+  overflow: hidden!important;
+  position: absolute!important;
+  clip: rect(0 0 0 0)!important;
+  width: 1px!important;
+  height: 1px!important;
+  margin: -1px!important
+}
+
+/* rset */
+
+p {
+  width: 200px;
+  background-color: yellow;
+  font-size: 16px;
+  line-height: 20px;
+}
+.elip1 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.elip2 {
+  max-height: 40px; /* webkit 외 브라우저 대응, line-height*line수 */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+.elip3 {
+  max-height: 60px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
