--- a/portfolio/css/portfolio.css
+++ b/portfolio/css/portfolio.css
@@ -546,6 +546,324 @@ p {
 
 
 
+/////////////////////////////////////////////////////////////////////920
+
+
+
+@charset "utf-8";
+/* common */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system,BlinkMacSystemFont,helvetica,Apple SD Gothic Neo,'굴림',gulim,sans-serif;
+  text-align: left;
+  font-size: 13px;
+  line-height:20px;
+  color: #000
+}
+
+html[data-useragent*=mac] body * {
+  font-family:'나눔 고딕', NanumGothic, '돋움', Dotum, sans-serif!important
+}
+
+input,select,textarea {
+  font-family:'나눔 고딕', NanumGothic, '돋움', Dotum, sans-serif;
+  font-size: 13px;
+  color: #000
+}
+
+address,dd,div,dl,dt,em,fieldset,form,h1,h2,h3,h4,iframe,input,li,object,ol,p,select,textarea,ul {
+  margin: 0;
+  padding: 0
+}
+
+img{
+  vertical-align: top;
+}
+fieldset,iframe,img {
+  border: none
+}
+
+iframe {
+  display: block
+}
+
+ol,ul {
+  list-style-type: none
+}
+
+table {
+  clear: both;
+  border-collapse: collapse
+}
+
+address,em {
+  font-style: normal
+}
+
+select {
+  height: 20px;
+  font-size: 12px
+}
+
+input {
+  padding-right: 1px
+}
+
+.ipad input[type=text],button,input[type=button],input[type=image],input[type=submit],textarea {
+  -webkit-appearance: none;
+  -webkit-text-size-adjust: none;
+  -webkit-border-radius: 0
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0.1);
+}
+
+table {
+  border-collapse: collapse;
+}
+
+table caption {
+  display: none !important;
+}
+
+
+.blind {
+  overflow: hidden!important;
+  position: absolute!important;
+  clip: rect(0 0 0 0)!important;
+  width: 1px!important;
+  height: 1px!important;
+  margin: -1px!important
+}
+
+/* rset */
+
+
+header{
+  overflow:hidden;
+  background-color:#fff;
+  padding: 20px 20px 0px 20px;
+}
+
+.logo{
+  float:left;
+  font-size: 20px;
+  color:black;
+}
+
+/* display none 속성시 감춤 */
+
+nav{
+  display: block;
+  position: absolute;
+  top: 60px;
+  left:0;
+  bottom: 0;
+  /* z-index: 10; */
+  width: 100%;
+  height: 128px;
+  margin:10px 0px 10px 0px;
+  padding: 10px 0px 10px 0px;
+  background-color: #fff;
+
+}
+nav a{
+  text-align: center;
+  display: block;
+  margin:10px 0px 10px 0px;
+  font-size: 25px;
+  height: 36px;
+  color:black;
+}
+
+nav a:hover{
+  font-weight: bold;
+}
+
+/* footer{
+height: 50px;
+line-height: 50px;
+text-align:center;
+background-color:#ccc;
+font-size: 14px;
+color:#000;
+} */
+
+
+/* logotexthidden */
+.FoodWith_logo {
+  display: block;
+  overflow: hidden;
+  width: 114px;
+  height: 50px;
+  background-position: -4px -4px;
+  text-indent: 101%;
+  white-space: nowrap;
+  background: url("../img/logo_m.png") no-repeat;
+  background-size: 100px 35px;
+}
+
+
+.lg_aside {
+  position: absolute;
+  top: 12px;
+  right: 0;
+  width: 64px;
+  height: 49px;
+}
+
+.lg_ham{
+  width:46px;
+  height:50px;
+  background-position:-30px -325px;
+  display:block;
+  overflow:hidden;
+  margin:12px 0px 0px 0px;
+  background: url(../img/icon_menu.png);
+  background-repeat: no-repeat;
+}
+
+.banner_area{
+  text-align: -webkit-center;
+  background: #ffee02;
+  margin: 20px 10px 10px 10px;
+}
+
+
+
+/* 말줄임 */
+p {
+  width: 275px;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+/* webkit 외 브라우저 대응, line-height*line수 */
+.elip2 {
+  max-height: 55px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  line-height: 28px;
+  font-weight: bold;
+  font-size: 22px;
+  color: #333;
+  margin: 0px 35px;
+}
+
+hr {
+  margin: 0px 20px;
+}
+
+/* 기본 이미지 */
+.author_img{
+  position: relative;
+  border-radius: 50%;
+  background-image: url(../img/thumbnail_profile_none.jpg);
+  width: 40px;
+  height: 40px;
+  background-size: cover;
+}
+
+/* 사용자 이미지 */
+.img-cover{
+  position: relative;
+  border-radius: 50%;
+  background-image: url(../img/thumbnail_profile.jpg);
+  width: 40px;
+  height: 40px;
+  background-size: cover;
+  z-index:1;
+}
+
+
+.banner_area ul {
+  display: inline-block;
+  width:100%;
+  table-layout: fixed;
+  margin: 0px 0px 20px 0px;
+}
+.banner_area li {
+  font-size: 16px;
+  color: #333;
+  margin: 0px 5px 0px 0px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+
+/* .thumb{
+
+} */
+
+.highlight {
+  display: flex;
+
+}
+
+.highlights .content {
+  background: #f0f0f0;
+  padding: 2rem;
+  font-size: 14px;
+  color: #333;
+}
+
+.more_item{
+  margin: 15px;
+  border: 1px solid black;
+  text-align:center;
+  font-size: 16px;
+  color: #333;
+  
+}
+
+
+
+
+
+/* .gnb_menu{
+position: absolute;
+top: 20px;
+right:10px;
+display: block;
+width: 46px;
+height: 50px;
+font-size: 1px;
+color: transparent;
+background: linear-gradient(#aaa 20%, transparent 10%);
+background-size: 100% 20px;
+} */
+
+/* form  setting*/
+/* input[type="text"],
+input[type="password"] {
+width: 198px;
+height: 38px;
+line-height: 38px;
+border: 1px solid #ddd;
+font-size: 15px;
+text-indent: 10px;
+color: #000;
+}
+
+textarea {
+width: 280px;
+height: 130px;
+padding: 9px;
+border: 1px solid #ddd;
+font-size: 15px;
+resize: none;
+color: #000;
+} */
+
+
+
 
 
 
