--- a/projectC/css/test.css
+++ b/projectC/css/test.css
@@ -1,4 +1,5 @@
 
+
 /* common */
 body {
   margin: 0;
@@ -88,9 +89,8 @@ table caption {
   margin: -1px!important
 }
 
+/* css reset  end*/
 
-
-/* css reset */
 .wrap {width:988px; margin: 0 auto;}
 
 header{height: 70px; background-color: pink; width: 100%; }
@@ -107,3 +107,57 @@ width: 114px; height: 70px; background-position: center; }
 li:nth-child(1) a{padding: 0px;}
 
 .menu:hover {font-weight: bold;}
+
+/* header end */
+
+.banner {
+  width:100%;
+  height: 420px;
+  background: #ffee02;
+}
+
+.container {
+  width: 800px;
+  margin: 0 auto;
+}
+
+.content {
+  float: left;
+  height: 340px;
+  margin-top: 80px;
+  background-color: lightsalmon;
+}
+
+p {
+  width: 460px;
+  height: 156px;
+  font-size: 40px;
+  line-height: 52px;
+  color: #333;
+}
+
+
+.elip {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
+
+.cross_bar {
+  width:50px;
+  margin: 20px 0px;
+  border: 1px solid black;
+}
+
+.aside {
+  float: right;
+  height: 420px;
+  background-color: lightseagreen;
+  line-height: 420px;
+}
+.aside img {
+  vertical-align: middle;
+}
+
