--- a/projectC/css/test.css
+++ b/projectC/css/test.css
@@ -100,15 +100,12 @@ select { border-radius:0; /* 아이폰 사파리 보더 없애기 */
 
 .wrap {width:988px; margin: 0 auto;}
 
-header{height: 70px; background-color: pink; width: 100%; }
+header{height: 70px; background-color: #fff; width: 100%; }
 
 header h1{line-height: 70px; float:left; background-image: url("../img/logo_pc.png"); background-repeat: no-repeat;
 width: 114px; height: 70px; background-position: center; }
 
-header.item_link {
-  position: relative;
-  display: block;
-}
+header.item_link {position: relative; display: block;}
 
 .menu{float:right;}
 
@@ -126,259 +123,226 @@ header li:nth-child(1) a{padding: 0px;}
 
 .container {width: 800px; margin: 0 auto;}
 
-.content {float: left; height: 340px;margin-top: 80px;background-color: lightsalmon;}
+.content {float: left; height: 340px;margin-top: 80px;background-color: #ffee02;}
 
 .content p{width: 460px;height: 156px;font-size: 40px;line-height: 52px;color: #333;}
 
+.content .elip {max-height: 156px; overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 3;}
 
-.content .elip {max-height: 156px; overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;}
+.cross_bar {width:50px;margin: 35px 0px;border: 1px solid black;}
 
-  .cross_bar {width:50px;margin: 35px 0px;border: 1px solid black;}
+.user_thumbnail{display: inline-block;width:40px;height:40px;border-radius: 100%; background-image:url('../img/thumbnail_profile_none.jpg');background-repeat: no-repeat;background-size: cover; vertical-align: middle;}
 
-  .user_thumbnail{display: inline-block;width:50px;height:50px;border-radius: 100%;
-    background-image:url('../img/thumbnail_profile_none.jpg');
-    background-repeat: no-repeat;background-size: cover; vertical-align: middle;}
+.user_thumbnail img{width:40px;height:40px;border-radius: 100%;}
 
-    .user_thumbnail img{width:50px;height:50px;border-radius: 100%;}
+.user_nickname {font-size: 18px;color: #333;vertical-align: middle;}
 
-    .user_nickname {font-size: 18px;color: #333;vertical-align: middle;}
+.aside {float: right;height: 420px;background-color: #ffee02;line-height: 420px;}
 
-    .aside {float: right;height: 420px;background-color: lightseagreen;line-height: 420px;}
+.aside img {vertical-align: middle;}
 
-    .aside img {vertical-align: middle;}
 
+/* banner end */
 
-    /* banner end */
 
+.thumbnail_area {width:100%;height:772px;background: #f0f0f0;}
 
-    /* #f0f0f0 */
-    /* .main_list {width:100%;height:420px; background: green;} */
+ul {list-style: none;font-size: 12px; line-height: 14px; text-align: center;}
 
-    .thumbnail_area {width:100%;height:772px;background: green;}
+.main_list {margin: 0 auto; padding: 20px 0px; }
+.main_list li {float: left; width: 316px;height: 316px; line-height: 316px; margin-bottom: 20px;}
+.main_list:after { display: block; content: ''; clear: both; }
+.main_list li + li { margin-left: 20px; }
+.main_list li:nth-child(4) { margin-left:0px;}
 
-    ul {list-style: none;font-size: 12px; line-height: 14px; text-align: center;}
 
-    .main_list {margin: 0 auto; padding: 20px 0px; }
-    .main_list li {float: left; width: 316px;height: 316px; line-height: 316px; background-color: pink;
-      margin-bottom: 20px;}
-      .main_list:after { display: block; content: ''; clear: both; }
-      .main_list li + li { margin-left: 20px; }
-      .main_list li:nth-child(4) { margin-left:0px;}
 
+.img_wrap {position: relative;width: 316px; height: 316px;}
+.img_wrap:hover:after{
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.thumbnail_area  a:hover .info {display:block;}
 
+.img_wrap:after { position: absolute; top: 0; right: 0; bottom: 0; left: 0;content: ''; border: 1px solid rgba(0, 0, 0, 0.1);}
 
-      .img_wrap {position: relative;width: 316px; height: 316px;}
+.thumbnail_area .item_link {position: relative; display: block; }
 
-      .img_wrap:hover:after{
-        background-color: rgba(255, 255, 255, 0.3);
-      }
 
-      .thumbnail_area  a:hover .info {
-        display:block;
-      }
+.info {display:none;position: absolute; background: #fff; width: 316px; height: 60px; bottom: 0px; color: #fff;  overflow: hidden; }
 
 
+.title { font-size: 18px; line-height: 60px; color: #333;}
 
+.more-area {background: #fff;background-image: url('../img/icon_arrow_more.png');background-repeat: no-repeat; background-position: 45% 50%;font-size: 16px; color:#333; width: 100%; height: 60px;cursor: pointer;
+}
 
-      .img_wrap:after { position: absolute; top: 0; right: 0; bottom: 0; left: 0;
-        content: ''; border: 1px solid rgba(0, 0, 0, 0.1);}
+/* thumb end */
 
 
-        .thumbnail_area .item_link {
-          position: relative;
-          display: block;
-        }
+.wrap_background {  width:988px;  height: 620px;  margin: 0 auto;  background-image: url('../img/bg_pencil.png');  background-repeat: no-repeat; background-position: 50% 75%;}
 
+.message_form {width:100%;height:620px;background:#f4f5f7;}
 
+.message_form_content {float: left; width:398px; height: 200px;margin-top: 80px; background-color: #f4f5f7;}
 
+.message_form_content p{width: 323px;height: 120px;font-size: 42px;line-height: 52px;color: #333;}
 
+.message_form strong {font-size: 18px; color: #333;}
 
-        /* 나중에  js로 add class 해줘야 할 부분 */
-        .info {display:none;position: absolute; background: #fff; width: 316px; height: 60px; bottom: 0px;
-          color: #fff;  overflow: hidden; }
+.message_form_aside {float: right; width:590px; height:460px; margin-top: 80px; background-color: rgba(255,255,255,0.9); line-height: 50px; box-shadow: 0px 8px 32px 0px rgba(0, 0, 0, 0.08);}
 
 
+.message_form form {
+  padding: 40px 50px 0px 50px;
+  height: 380px;
+}
 
-          .title { font-size: 18px; line-height: 60px; color: #333;
-            /* overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap; */
-          }
+fieldset{
+  height: 380px;
+}
 
-          .more-area {background: #fff;background-image: url('../img/icon_arrow_more.png');
-          background-repeat: no-repeat; background-position: 45% 50%;
-          font-size: 16px; color:#333; width: 100%; height: 60px;
-        }
+.message_form label {display: block;font-size: 16px; color: #333; height: 40px; font-weight: bold; cursor: pointer;}
 
+.message_form input::placeholder {
+  color: #acacac;
+  font-size: 14px;
+}
 
+.message_form textarea::placeholder {
+  color: #acacac;
+  font-size: 14px;
+  padding: 15px;
+  opacity: 0.9;
+}
 
+.message_form input {
+  width:100%;
+  border: none;
+  background: rgba(255,255,255,0.9);
+  padding-bottom: 10px;
+  border-bottom: 1px solid #c1c1c1;
+  font-size: 14px;
+  color:#333;
+}
+.message_form input[type~="email"] {
+  width:50%;
+}
 
-        .message_form {width:100%;height:620px;background:#737492;}
-
-        .message_form_content {float: left; width:398px; height: 400px;margin-top: 80px;
-          background-image: url('../img/bg_pencil.png');
-          background-repeat: no-repeat; background-position:0% 96% ;
-          background-color: lightsalmon;}
-
-          .message_form_content p{width: 320px;height: 120px;font-size: 42px;line-height: 52px;color: #333;}
-
-          .message_form strong {font-size: 18px; color: #333;}
-
-          .message_form_aside {float: right; width:590px; height:460px; margin-top: 80px;
-            background-color: lightseagreen; line-height: 50px;
-            box-shadow: 0px 32px 2px 0px rgba(0, 0, 0, 0.08);}
-
-            .noice_aside img {vertical-align: middle;}
-
-            .message_form form {
-              padding: 40px 50px 0px 50px;
-              height: 380px;
-            }
-
-            fieldset{
-              height: 380px;
-            }
-
-            .message_form label {display: block;font-size: 16px; color: #333; height: 40px; font-weight: bold; }
-
-            .message_form input::placeholder {
-              color: #acacac;
-              font-size: 14px;
-            }
-
-            .message_form textarea::placeholder {
-              color: #acacac;
-              font-size: 14px;
-              padding: 15px;
-            }
-
-            .message_form input {
-              width:100%;
-              border: none;
-              background: lightseagreen;
-              padding-bottom: 10px;
-              border-bottom: 1px solid #c1c1c1;
-              font-size: 14px;
-              color:#333;
-            }
-            .message_form input[type~="email"] {
-              width:50%;
-            }
-
-            .message_form select {
-              width:46.5%;
-              border: none;
-              background: lightseagreen;
-              height: 36px;
-              border-bottom: 1px solid #c1c1c1;
-              font-size: 14px;
-              color:#333;
-              background-image: url('../img/icon_arrow_email.png');
-              background-repeat: no-repeat;
-              background-position: 97% 40%;
-            }
-            .message_form textarea {
-              width: 100%;
-              margin-top: 48px;
-              resize: none;
-
-
-            }
-            .message_form button[Type='submit'] {
-              position: relative;
-              cursor: pointer;
-              border: 2px solid #bdbdbd;
-              background: #e9e9e9;
-              color:#666;
-              font-size: 15px;
-              width:100px;
-              height: 45px;
-              left: 390px;
-              top: -400px;
-            }
-
-            /* massage end */
-
-
-            .notice {width:100%;height:240px;background:yellow;}
-
-
-            .notice_content {
-              padding-top: 15px;
-              height: 20px;
-            }
-
-            .notice_content strong{
-              font-size: 16px;
-              color: #333;
-
-            }
-
-            .notice_content  p {
-              float: left;
-              font-size: 14px;
-              color: #333;
-            }
-
-            .txt_line {
-              width:345px;
-              padding:0 5px;
-              overflow:hidden;
-              text-overflow:ellipsis;
-              white-space:nowrap;
-            }
-
-            .notice button {
-              float: right;
-              cursor: pointer;
-              border: none;
-              font-size: 14px;
-              color: #333;
-              background: yellow;
-
-            }
-
-            .notice_content:after {
-              display: block;
-              clear:both;
-              content:'';
-            }
-
-            .cross_long_bar {width:100%;margin: 35px 0px;border: 1px solid black;}
-
-            .detail_contents{
-              margin-left: 15px;
-            }
-            .detail_contents:nth-of-type(3) {
-              margin-left: 0px;
-            }
-
-            .vertical_bar {
-              margin: 0px 10px 0px 10px;
-              border-right: 1px solid #c1c1c1;
-            }
-
-
-
-
-            /* notice_end */
-
-            footer {width:100%;height:100px;background:aqua; text-align: center;}
-
-            footer ul {
-              display: inline-block;
-              line-height: 50px;
-            }
-
-            footer li {
-              float: left;
-              margin-left: 30px;
-            }
-            footer ul:after {
-              display: block;
-              clear:both;
-              content:'';
-            }
-
-            footer li:first-child {margin-left: 0px;}
+.message_form select {
+  width:46.5%;
+  border: none;
+  background: rgba(255,255,255,0.9);
+  height: 36px;
+  border-bottom: 1px solid #c1c1c1;
+  font-size: 14px;
+  color:#333;
+  background-image: url('../img/icon_arrow_email.png');
+  background-repeat: no-repeat;
+  background-position: 97% 40%;
+}
+.message_form textarea {
+  width: 100%;
+  margin-top: 48px;
+  resize: none;
+
+
+}
+.message_form button[Type='submit'] {
+  position: relative;
+  cursor: pointer;
+  border: 2px solid #bdbdbd;
+  background: #e9e9e9;
+  color:#666;
+  font-size: 15px;
+  width:100px;
+  height: 45px;
+  left: 390px;
+  top: -400px;
+}
+
+/* massage end */
+
+
+.notice {width:100%;height:240px;background:#f0f0f0;}
+
+
+.notice_content {
+  padding-top: 15px;
+  height: 20px;
+}
+
+.notice_content strong{
+  font-size: 16px;
+  color: #333;
+
+}
+
+.notice_content  p {
+  float: left;
+  font-size: 14px;
+  color: #333;
+}
+
+.txt_line {
+  width:400px;
+  padding:0 5px;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  white-space:nowrap;
+}
+
+.notice button {
+  float: right;
+  cursor: pointer;
+  border: none;
+  font-size: 14px;
+  color: #333;
+  background: #f0f0f0;
+
+}
+
+.notice_content:after {
+  display: block;
+  clear:both;
+  content:'';
+}
+
+.cross_long_bar {width:100%;margin: 35px 0px;border: 1px solid black;}
+
+.detail_contents{
+  margin-left: 15px;
+}
+.detail_contents:nth-of-type(3) {
+  margin-left: 0px;
+}
+
+.vertical_bar {
+  margin: 0px 10px 0px 10px;
+  border-right: 1px solid #c1c1c1;
+}
+
+
+
+
+/* notice_end */
+
+footer {width:100%;height:100px;background:#fff; text-align: center;font-size: 14px;color:#333;}
+
+footer ul {
+  display: inline-block;
+  line-height: 50px;
+  font-size: 14px;
+  color:#333;
+}
+
+footer li {
+  float: left;
+  margin-left: 30px;
+}
+footer ul:after {
+  display: block;
+  clear:both;
+  content:'';
+}
+
+footer li:first-child {margin-left: 0px;}
