--- a/projectC/css/test.css
+++ b/projectC/css/test.css
@@ -118,7 +118,7 @@ header.item_link {position: relative; display: block;}
 
 .menu{float:right;}
 
-.menu li {height: 70px;float:left; color: #333; font-size:22px;  padding: 0px 18px 0px 18px; }
+.menu li {float:left; color: #333; font-size:22px;  padding: 0px 18px 0px 18px; }
 
 .menu a {line-height: 70px;}
 
@@ -399,6 +399,9 @@ footer li:first-child {margin-left: 0px;}
 @media (min-width: 768px)  and (max-width: 1023px){
 
   .wrap {max-width:988px; margin: 0 auto; padding-left: 34px; padding-right: 34px;}
+  header .wrap {padding-left: 0px; padding-right: 0px;}
+  header li:nth-last-child( 1 ) {padding-right: 18px;}
+
   .wrap_background {max-width:988px;  height: 620px;  margin: 0 auto;
    padding-left: 34px; padding-right: 34px;
    background-image: url('../img/bg_pencil.png');
@@ -408,10 +411,9 @@ footer li:first-child {margin-left: 0px;}
    background-image: url("../img/logo_m.png"); background-repeat: no-repeat;
    background-size: 84px 18px; width: 114px; height: 50px; background-position: center;}
   .menu a { line-height: 50px;}
-  .menu li {height: 50px;}
+  .menu li {height: 50px; font-size: 18px;}
 
 
- .banner {height: 330px; }
  .bannertxt {margin-top: 60px; height: 270px;}
  .bannertxt h2 { width: 350px; height: 130px; font-size: 32px; line-height: 40px; color: #333; }
  .bannertxt .elip {max-height: 130px; overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 3;}
@@ -423,30 +425,32 @@ footer li:first-child {margin-left: 0px;}
 
 
 
-.thumbnail_area {width:100%;height:772px;background: #f0f0f0;}
+.thumbnail_area {background: #f0f0f0;}
 
-  ul {list-style: none;font-size: 12px; line-height: 14px; text-align: center;}
+.main_list img {width: 100%;}
 
-  .main_list {margin: 0 auto; padding: 20px 0px; }
-  .main_list li {float: left; width: 48.8%; height: 316px; line-height: 316px; margin-bottom: 20px;}
-  .main_list:after { display: block; content: ''; clear: both; }
-  .main_list li:nth-child(3) { margin-left:0px;} .main_list li:nth-child(4) { margin-left:20px;} .main_list li:nth-child(5) { margin-left:0px;}
+.main_list li {float: left; width: auto; height: auto; line-height: 316px; margin-bottom: 80px;}
 
-  .img_wrap {position: relative;width: 100%; height: 316px;}
-  .img_wrap img { width: 100%;}
-  .img_wrap:hover:after{background-color: rgba(255, 255, 255, 0.3); }
+.main_list:after { display: block; content: ''; clear: both; }
+.main_list li { margin-left: 20px;  width: calc(50% - 10px);}
+.main_list li:nth-child(3n+1) { margin-left:20px;}
+.main_list li:nth-child(2n-1) { margin-left:0px;}
 
+.img_wrap {width: 100%; height: 100%;}
 
-  .img_wrap:after { position: absolute; top: 0; right: 0; bottom: 0; left: 0;content: ''; border: 1px solid rgba(0, 0, 0, 0.1);}
+.img_wrap:hover:after{background-color: rgba(255, 255, 255, 0.3);}
 
-  .thumbnail_area .item_link {position: relative; display: block; }
+.thumbnail_area  a:hover .info {display:block;}
 
+.img_wrap:after { position: absolute; top: 0; right: 0; bottom: 0; left: 0;content: ''; border: 1px solid rgba(0, 0, 0, 0.1);}
 
-  .info {display:none;position: absolute; background: #fff; width: 316px; height: 50px; bottom: 0px; color: #fff;  overflow: hidden; }
+.thumbnail_area .item_link {position: relative; display: block; }
 
-  .thumbnail_area  a:hover .info {display:none;}
+.info {display:block; position: absolute; background: #fff;
+  width: 100%; height: 60px; bottom: -60px; color: #fff; margin-bottom: 0px; }
 
-  .title { font-size: 18px; line-height: 60px; color: #333;padding: 0 5px; overflow: hidden; text-overflow: ellipsis;  white-space: nowrap; }
+.title { font-size: 18px; line-height: 60px; color: #333;padding: 0 5px;
+  overflow: hidden; text-overflow: ellipsis;  white-space: nowrap; }
 }
 
 
