--- a/projectC/css/test.css
+++ b/projectC/css/test.css
@@ -104,6 +104,10 @@ select { border-radius:0; /* 아이폰 사파리 보더 없애기 */
 
 /* css reset  end*/
 
+.gnb_menu {
+  display: none;
+}
+
 .wrap {max-width:988px; margin: 0 auto;}
 
 header{background-color: #fff; }
@@ -191,11 +195,8 @@ ul {list-style: none;font-size: 12px; line-height: 14px; text-align: center;}
 .title { font-size: 18px; line-height: 60px; color: #333;padding: 0 5px; overflow: hidden; text-overflow: ellipsis;  white-space: nowrap; }
 
 .thumbnail_area button {background: #fff;background-image: url('../img/icon_arrow_more.png');background-repeat: no-repeat; background-position: 46.5% 50%; background-size:16px 16px;
- font-size: 16px; color:#333;cursor: pointer;  width: 100%; height: 60px;
-border: 1px solid rgba(0, 0, 0, 0.1);
-font-size: 14px;
-color: #333;
-}
+ font-size: 16px; color:#333;cursor: pointer;  width: 100%; height: 60px; border: 1px solid rgba(0, 0, 0, 0.1);
+font-size: 14px;color: #333;}
 
 /* thumb end */
 
@@ -216,45 +217,19 @@ color: #333;
 
 .message_form_aside {float: right; width:590px; height:460px; margin-top: 80px; background: rgba(255,255,255,0.9); line-height: 50px; box-shadow: 0px 8px 32px 0px rgba(0, 0, 0, 0.08);}
 
-
-.message_form form {
-  padding: 40px 50px 40px 50px;
-
-}
-
-
+.message_form form {padding: 40px 50px 40px 50px;}
 
 .message_form label {display: block;font-size: 16px; color: #333; height: 40px; font-weight: bold; cursor: pointer;}
 
-.message_form input::placeholder {
-  color: #acacac;
-  font-size: 14px;
-}
+.message_form input::placeholder { color: #acacac; font-size: 14px; }
 
-.message_form textarea::placeholder {
-  color: #acacac;
-  font-size: 14px;
-  padding: 15px;
-  opacity: 0.9;
-}
+.message_form textarea::placeholder { color: #acacac; font-size: 14px; padding: 15px; opacity: 0.9; }
 
-.message_form input {
-  width:100%;
-  border: none;
-  background: rgba(255,255,255,0.9);
-  padding-bottom: 10px;
-  border-bottom: 1px solid #c1c1c1;
-  font-size: 14px;
-  color:#333;
-}
+.message_form input { width:100%; border: none; background: rgba(255,255,255,0.9); padding-bottom: 10px;
+  border-bottom: 1px solid #c1c1c1; font-size: 14px; color:#333; }
 
+.mail_area p { display: inline-block; width:20px; text-align: center; }
 
-
-.mail_area p {
-  display: inline-block;
-  width:20px;
-  text-align: center;
-}
 .mail_area:after {
     display: block;
     content: '';
@@ -262,41 +237,15 @@ color: #333;
 }
 
 
-
-.message_form select {
-
-  border: none;
-  background: rgba(255,255,255,0.9);
-
-  border-bottom: 1px solid #c1c1c1;
-  font-size: 14px;
-  color:#333;
-  background-image: url('../img/icon_arrow_email.png');
-  background-repeat: no-repeat;
-  background-size: 10px 6px;
-  background-position: 97% 40%;
-}
+.message_form select { border: none; background: rgba(255,255,255,0.9); border-bottom: 1px solid #c1c1c1; font-size: 14px;
+  color:#333; background-image: url('../img/icon_arrow_email.png'); background-repeat: no-repeat; background-size: 10px 6px;
+  background-position: 97% 40%; }
 
 
-.message_form textarea {
-  width: 100%;
-  margin-top: 50px;
-  resize: none;
-  background: rgba(255,255,255,0);
-}
+.message_form textarea { width: 100%; margin-top: 50px; resize: none; background: rgba(255,255,255,0); }
 
-.message_form button[Type='submit'] {
-  position: relative;
-  cursor: pointer;
-  border: 2px solid #bdbdbd;
-  background: #e9e9e9;
-  color:#666;
-  font-size: 15px;
-  width:100px;
-  height: 45px;
-  left: 390px;
-  top: -390px;
-}
+.message_form button[Type='submit'] { position: relative; cursor: pointer; border: 2px solid #bdbdbd; background: #e9e9e9;
+  color:#666; font-size: 15px; width:100px; height: 45px; left: 390px; top: -390px; }
 
 .message_form .mail_area {
   margin-top: 15px;
@@ -305,41 +254,18 @@ color: #333;
 float: right; top: -395px; left: auto;
 }
 
-.message_form select {
-width: 45%;
-height: auto;
-float: left;
-padding-bottom: 10px;
-}
+.message_form select { width: 45%; height: auto; float: left; padding-bottom: 10px; }
 
-.message_form .at {
-  float: left;
-  text-align: center;
-      line-height: 15px;
-  width:10%
-}
-.message_form input[type~="email"]{
+.message_form .at { float: left; text-align: center; line-height: 15px; width:10% }
 
-  width: 45%;
-  float: left;
-
-}
-
-
+.message_form input[type~="email"] { width: 45%; float: left; }
 
 
 /* massage end */
-.notice ul, .notice li {
-  display: inline;
-  font-size: 14px;
-  color: #333;
-}
+.notice ul, .notice li { display: inline; font-size: 14px; color: #333; }
 
 
-
-.notice_content:nth-child(2) {
-  margin-bottom: 15px;
-}
+.notice_content:nth-child(2) { margin-bottom: 15px; }
 
 .notice {background:#f0f0f0; padding-bottom: 15px;}
 
@@ -349,39 +275,15 @@ padding-bottom: 10px;
   clear: both;
 }
 
-.notice_content {
-  padding-top: 15px;
-  height: 20px;
-}
+.notice_content { padding-top: 15px; height: 20px; }
 
-.notice_content h3{
-  display: inline-block;
-  font-size: 16px;
-  color: #333;
-}
+.notice_content h3{ display: inline-block; font-size: 16px; color: #333; }
 
-.notice_content strong {
-  float: left;
-  font-size: 14px;
-  color: #333;
-  font-weight: normal;
-}
+.notice_content strong { float: left; font-size: 14px; color: #333; font-weight: normal; }
 
-.txt_line {
-  width:400px;
-  overflow:hidden;
-  text-overflow:ellipsis;
-  white-space:nowrap;
-}
+.txt_line {  width:400px; overflow:hidden; text-overflow:ellipsis; white-space:nowrap; }
 
-.notice button {
-  float: right;
-  cursor: pointer;
-  border: none;
-  font-size: 14px;
-  color: #333;
-  background: #f0f0f0;
-}
+.notice button { float: right; cursor: pointer; border: none; font-size: 14px; color: #333;  background: #f0f0f0; }
 
 .notice_content:after {
   display: block;
@@ -391,17 +293,9 @@ padding-bottom: 10px;
 
 .cross_long_bar {border: 1px solid #c1c1c1;}
 
+.notice_content li:nth-child(1) { margin-left: 15px; }
 
-
-.notice_content li:nth-child(1) {
-margin-left: 15px;
-}
-
-.vertical_bar {
-  display:  inline-block;
-  border-right: 1px solid #c1c1c1;
-  height: 10px;
-}
+.vertical_bar { display:  inline-block; border-right: 1px solid #c1c1c1;  height: 10px; }
 
 
 
@@ -409,17 +303,9 @@ margin-left: 15px;
 
 footer {height:100px;background:#fff; text-align: center;font-size: 14px;color:#333;}
 
-footer ul {
-  display: inline-block;
-  line-height: 50px;
-  font-size: 14px;
-  color:#333;
-}
+footer ul { display: inline-block; line-height: 50px; font-size: 14px; color:#333; }
 
-footer li {
-  float: left;
-  margin-left: 30px;
-}
+footer li { float: left; margin-left: 30px; }
 footer ul:after {
   display: block;
   clear:both;
@@ -436,13 +322,16 @@ footer li:first-child {margin-left: 0px;}
   header .wrap {padding-left: 0px; padding-right: 0px;}
   header li:nth-last-child( 1 ) {padding-right: 18px;}
 
-
    header{height: 50px;}
    header h1 {line-height: 50px;
    background-image: url("../img/logo_m.png"); background-repeat: no-repeat;
    background-size: 84px 18px;  height: 50px; background-position: center;}
 
   .menu li {height: 50px; font-size: 18px;}
+
+
+  /* header end */
+
 
 
  .bannertxt {margin-top: 60px; height: 270px; width: calc(100% - 350px);}
@@ -496,6 +385,8 @@ font-size: 16px; color:#333; cursor: pointer;}
  background-repeat: no-repeat; background-position: 50% 75%;
 }
 
+/* thumb end */
+
 
 .message_form_content {
   float: none;width: inherit;margin-top: 0px;    margin-bottom: 20px;text-align: center;}
@@ -508,9 +399,110 @@ width: inherit; font-size: 30px; margin-bottom: 0px;}
 float: none; margin-top: 0px; width: inherit;
 }
 
-
 }
-@media (min-width: 320px)  {
+
+
+
+@media (min-width: 320px) and (max-width: 767px) {
+
+
+  header .wrap {padding-left: 0px; padding-right: 0px;}
+   header{height: 50px;}
+
+   header h1 {line-height: 50px;
+   background-image: url("../img/logo_m.png"); background-repeat: no-repeat;
+   background-size: 84px 18px;  height: 50px; background-position: center;}
+
+  .menu li {height: auto; font-size: 22px; color: #333; padding: 0px;}
+
+  .menu {
+    display: none;
+    /* display: grid; */
+    padding: 10px 0px;
+    grid-template-rows: 36px 36px 36px;
+		position: absolute;
+		top: 50px;
+		left:0;
+		bottom: 0;
+		width: 100%;
+		margin:0;
+		background-color: #fff;
+    height: 108px;
+
+  }
+
+  .menu a {
+    line-height: 36px;
+    display: block;
+}
+
+
+  .gnb_menu{
+      display: block;
+  		position: absolute;
+  		top: 0px;
+  		right:0px;
+  		width: 46px;
+  		height: 50px;
+  		color: transparent;
+      background-image: url('../img/icon_menu.png');
+      background-repeat: no-repeat;
+  		background-size: 16px 16px;
+      background-position: 15px;
+  	}
+
+  /* header end */
+
+.bannertxt {
+  float: none;
+  height: auto;
+  margin-top: 200px;
+  padding: 0px 35px 0px 35px;
+}
+.bannertxt h2 {
+  width: auto;
+  height: auto;
+  font-size: 22px;
+  line-height: 28px;
+}
+
+.bannertxt .elip {
+    -webkit-line-clamp: 2;
+}
+
+.banner .wrap {
+ display:flex;
+ flex-direction: column-reverse;
+}
+.aside {
+  float: none;
+  text-align: center;
+  margin-top: 20px;
+  height: 0px;
+  line-height: 0px;
+}
+
+.aside img {
+  width:250px;
+  height: 180px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
